# dawars

./: Cargo.toml  README.md
src/: blocking.rs  lib.rs
src/blocking/: mod.rs  request.rs  request_builder.rs
src/blocking/request/: chained_constructor.rs
src/models/: mod.rs  municipality.rs  municipality_code.rs  named_road.rs  road_history.rs  road_section.rs  road_segment.rs  spell_check_status.rs  zip_code.rs
tests/: blocking.rs  system.rs
tests/data/named_road/: amaliegade.json  cph.json
