[package]
name = "dawars"
authors = ["Rasmus Ladekjær Pedersen <ladekjaer@gmail.com>"]
version = "0.0.1"
edition = "2024"
rust-version = "1.86.0"
description = "Library to query Danmarks Adressers Web API (DAWA)"
readme = "README.md"
keywords = ["DAWA"]
publish = true


[dependencies]
url = { version = "2.5.4", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
serde_json = "1.0.140"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
